namespaces/vij-argocd.cloud-platform.service.justice.gov.uk/vv-test-3/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vv-test-3
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "app-test"
    cloud-platform.justice.gov.uk/owner: "vijay.veeranki: cloud-platform"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/poornima-moj/cloud-platform-gitops-test3"
